--- a/dataeval-app/src/app/user/multiform/multiform.component.css
+++ b/dataeval-app/src/app/user/multiform/multiform.component.css
@@ -5,3 +5,29 @@
 .mat-form-field {
   margin-top: 16px;
 }
+
+.stepper-header-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  
+}
+
+.btn-default {
+  color: white;
+  background-color: #dbdbdb4d;
+}
+
+
+
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: 0.4em 0px !important;}
+::ng-deep .mat-form-field-label-wrapper { top: -1.5em; }
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
+    transform: translateY(-1.1em) scale(.75);
+    width: 200.33333%;
+}
