user form details

--- a/dataeval-app/src/app/components/menus/menu/menu.component.html
+++ b/dataeval-app/src/app/components/menus/menu/menu.component.html
@@ -7,7 +7,10 @@
             </li> -->
             
             <li>
-                <a *ngIf="isLoggedIn" class="nav-link" href="/flowconfig" >Manage Flow</a>
+                <a *ngIf="isLoggedIn" class="nav-link" href="/flowconfig" >Manage Prototype</a>
+            </li>
+            <li>
+                <a *ngIf="isLoggedIn" class="nav-link" href="/userforms" >User Forms</a>
             </li>
             <li>
                 <a *ngIf="isLoggedIn" class="nav-link" href="/question" >Manage Question</a>
