--- a/dataeval-app/src/app/user/multiform/multiform.component.html
+++ b/dataeval-app/src/app/user/multiform/multiform.component.html
@@ -1,10 +1,6 @@
 <app-menu></app-menu>
 
-<div class="container">
-  <p>multiform works!</p>
-  <button mat-raised-button (click)="isEditable = !isEditable">
-    {{!isEditable ? 'Enable edit mode' : 'Disable edit mode'}}
-  </button>
+<div class="container"> 
   <mat-stepper linear #stepper class="bg-gradient">
     <div *ngFor="let form of formGroups; let i = index; trackBy: trackByFn;">
       <mat-step [stepControl]="form" editable>
@@ -49,7 +45,7 @@
               </div>
 
               <div class="col text-center">
-                <button mat-button class="btn btn btn-success" (click)="onFormSubmit()"
+                <button mat-button class="btn btn btn-success" (click)="onFormSubmit(stepper)"
                   [disabled]="i !=formGroups.length-1">Submit</button>
 
               </div>
