--- a/dataeval-app/src/app/admin/userformdetails/userformdetails.component.html
+++ b/dataeval-app/src/app/admin/userformdetails/userformdetails.component.html
@@ -3,7 +3,7 @@
 <div class="container"> 
     <mat-stepper linear #stepper class="bg-gradient">
       <div *ngFor="let form of formGroups; let i = index; trackBy: trackByFn;">
-        <mat-step [stepControl]="form" editable>
+        <mat-step [stepControl]="form" editable="false">
           <form [formGroup]="form" (ngSubmit)="nextClick(form.value,i)">
             <ng-template (click)="nextClick(form.value,i)" matStepLabel>
               <div class="stepper-header-overlay" (click)="nextClick(form.value,i)"> </div>{{pages[i].label}}
@@ -18,17 +18,43 @@
                 </mat-expansion-panel-header>
                 <div class="container">
                   <div class="row">
-                    <div *ngFor="let fields of section.fields; let k=index" class="{{section.layout == 2 ?  'col-6' :'col-12'}}">
+                    <div *ngFor="let field of section.fields; let k=index" class="{{section.layout == 2 ?  'col-6' :'col-12'}}"
+                    [ngSwitch]="field.type">
                       <div class="form-group">
                         <!--     -->
-                        <label for="{{fields.controlName}}">{{fields.label}} {{fields.required ? '*' :''}}  </label>
-                        <div class="input-group">
-                          <mat-form-field appearance="outline">
+                        <label for="{{field.controlName}}">{{field.label}} {{field.required ? '*' :''}}  </label>
+                        
+
+                            <div *ngSwitchCase="'Text'">
+                              <mat-form-field appearance="outline" style="width: 100%">
+                                <input matInput placeholder="Type here...." readonly="{{field.readonly}}"
+                                  required={{field.required}} formControlName={{field.controlName}}>
+                              </mat-form-field>
+                            </div>
+                            <div *ngSwitchCase="'Date'">
+                              <mat-form-field appearance="outline">
+                                <input matInput type="date" placeholder="Type here...." readonly="{{field.readonly}}"
+                                  required={{field.required}} formControlName={{field.controlName}}>
+                              </mat-form-field>
+                            </div>
+    
+                            <div *ngSwitchCase="'Radio'">
+    
+                              <mat-form-field appearance="outline" style="width: 100%">
+    
+                                <input matInput style="display: none;" required={{field.required}}
+                                  readonly="{{field.readonly}}" formControlName={{field.controlName}}>
+    
+                                <mat-radio-group aria-label="test" required={{field.required}}
+                                  formControlName={{field.controlName}}>
+                                  <mat-radio-button value="Yes" disabled="{{field.readonly}}">Yes</mat-radio-button>
+                                  &nbsp;
+                                  <mat-radio-button value="No" disabled="{{field.readonly}}">No</mat-radio-button>
+                                </mat-radio-group>
+                              </mat-form-field>
+    
+                            </div>
                              
-                            <input matInput placeholder="Type here...."  readonly="true"    required={{fields.required}} formControlName={{fields.controlName}}>
-                          </mat-form-field>
-                          &nbsp;
-                        </div>
                       </div>
                       <div class="w-100"></div>
                     </div>
