--- a/dataeval-app/src/app/admin/flowconfig/flowconfig.component.html
+++ b/dataeval-app/src/app/admin/flowconfig/flowconfig.component.html
@@ -1,14 +1,9 @@
-<app-menu></app-menu>
+ 
 
-<div class="container">
+<div >
     <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
         <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
-
-
     </div>
-
-
-
     <div class="example-container mat-elevation-z8">
 
         <mat-table [dataSource]="fcDataSource">
@@ -21,9 +16,8 @@
             </ng-container><!-- Progress Column -->
             <ng-container matColumnDef="role">
                 <mat-header-cell *matHeaderCellDef> Role Name </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.role.roleName}}</mat-cell>
+                <mat-cell *matCellDef="let row"> {{row.role.name}}</mat-cell>
             </ng-container>
-
             <!-- Name Column -->
             <ng-container matColumnDef="flowName">
                 <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
@@ -32,16 +26,17 @@
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button mat-raised-button class="btn btn-secondary" (click)="openEdit(contentEdit, row)">
+                    <button mat-raised-button class="btn btn-secondary" style="display:none;"
+                        (click)="openEdit(contentEdit, row)">
                         Edit</button>
+                    <button mat-raised-button class="btn btn-secondary" (click)="viewUserForm(contentEdit, row)">
+                        View</button>
                 </mat-cell>
             </ng-container>
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;">
             </mat-row>
-
         </mat-table>
-
         <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
 
     </div>
@@ -55,8 +50,8 @@
             </button>
         </div>
         <div class="modal-body">
-            <form [formGroup]="flowConfigForm" #formDirective="ngForm"  (ngSubmit)="saveFlowConfig()">
-                <div class="form-group">
+            <form [formGroup]="flowConfigForm" #formDirective="ngForm" (ngSubmit)="saveFlowConfig()">
+                <!-- <div class="form-group">
                     <label for="dateOfBirth">Date of birth</label>
                     <div class="input-group">
                         <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker
@@ -65,14 +60,12 @@
                             <button class="btn btn btn-secondary calendar" (click)="dp.toggle()" type="button"></button>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <label for="flowConfigName" class="font-weight-bold">Name :</label>
                     <input type="text" class="form-control" id="flowConfigName" placeholder="Enter Flow Name"
                         name="flowConfigName" formControlName="flowConfigName" required>
-
-
                 </div>
                 <div class="mt-2">
                     <div *ngIf="flowConfigName.invalid && (flowConfigName.dirty || flowConfigName.touched)"
@@ -83,10 +76,8 @@
                         <div *ngIf="flowConfigForm.controls['flowConfigName']?.errors.minlength">
                             Name must be at least 4 characters long.
                         </div>
-
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label for="selectRole" class="font-weight-bold">Role</label>
                     <!-- <div ngbDropdown container="body" class="input-group-append ">
@@ -98,22 +89,21 @@
 
                         </div>
                     </div> -->
-
                     <select class="custom-select" (change)="selectRole($event)" formControlName="roleName">
                         <option value="" disabled>Select Role</option>
                         <option *ngFor="let role of roles" value="{{role.name}}">{{role.name}}</option>
-                     </select>
+                    </select>
                 </div>
-                
+
+                <div class="border text-center">
+                    <button data-dismiss="modal" class="btn btn-info" [disabled]="!flowConfigForm.valid"
+                        class="btn btn-info">Save</button>
+                    &nbsp;
+                    <button type="button" class="btn btn-info"
+                        (click)="resetCreateForm(flowConfigForm, formDirective)">Reset</button>
 
 
-                <div class="border text-center"> 
-                    <button data-dismiss="modal"  class="btn btn-info" [disabled]="!flowConfigForm.valid"
-                        class="btn btn-info">Save Changes</button> 
-                        <button  type="button" class="btn btn-info" (click)="resetCreateForm(flowConfigForm, formDirective)" >reset</button>
-
-                    
-                    </div>
+                </div>
             </form>
         </div>
 
@@ -170,13 +160,13 @@
 
                     <select class="custom-select" (change)="selectRole($event)" formControlName="roleName">
                         <option value="" disabled>Select Role</option>
-                        <option *ngFor="let role of roles" [selected]="role.name === selectedRole" value="{{role.name}}" >{{role.name}}</option>
-                     </select>
+                        <option *ngFor="let role of roles" value="{{role.name}}">{{role.name}}</option>
+                    </select>
                 </div>
                 <div class="border text-center">
                     <button data-dismiss="modal" [disabled]="!flowConfigEditForm.valid" class="btn btn-info">Save
                         Changes</button>
-                                   </div>
+                </div>
             </form>
         </div>
 
