--- a/dataeval-app/src/app/app.component.html
+++ b/dataeval-app/src/app/app.component.html
@@ -1,2 +1,79 @@
+<mat-toolbar class="mat-elevation-z8">
+    <button mat-icon-button *ngIf="sidenav.mode === 'over'" (click)="sidenav.toggle()">
+        <mat-icon *ngIf="!sidenav.opened">
+            menu
+        </mat-icon>
+        <mat-icon *ngIf="sidenav.opened">
+            close
+        </mat-icon>
+    </button>
+    Data Evaluation
+</mat-toolbar>
 
-<router-outlet></router-outlet>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+
+        <!-- <img class="avatar mat-elevation-z8" src="https://source.unsplash.com/c_GmwfHBDzk/200x200" /> -->
+
+        <h4 class="name">Sai Ram</h4>
+        <p class="designation">Principle Engineer</p>
+
+        <mat-divider></mat-divider>
+
+        <button *ngIf="isLoggedIn" (click)="view('/flowconfig')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage Forms</span>
+        </button>
+        <button *ngIf="isLoggedIn" (click)="view('/userforms')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage User Forms</span>
+        </button>
+        <button *ngIf="isLoggedIn" (click)="view('/patient')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>User Form</span>
+        </button>
+        <button *ngIf="isLoggedIn" (click)="view('/question')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage Fields</span>
+        </button>
+
+        <button *ngIf="isLoggedIn" (click)="view('/user')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage Users</span>
+        </button>
+        <button *ngIf="isLoggedIn" (click)="view('/sections')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage Sections</span>
+        </button>
+        <button *ngIf="isLoggedIn" (click)="view('/steps')" mat-button class="menu-button">
+            <mat-icon>arrow_right</mat-icon>
+            <span>Manage Steps</span>
+        </button>
+
+        <button mat-button class="menu-button">
+            <mat-icon>info</mat-icon>
+            <span>About</span>
+        </button>
+
+        <mat-divider></mat-divider>
+
+        <button mat-button class="menu-button">
+            <mat-icon>help</mat-icon>
+            <span>Help</span>
+        </button>
+
+        <button *ngIf="isLoggedIn" (click)="handleLogout()" mat-button class="menu-button">
+            <mat-icon>exit_to_app</mat-icon>
+            <span>Logout</span>
+        </button>
+        
+
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <div class="content mat-elevation-z8">
+            <div style="width:80%;float:right;">
+                <router-outlet style="width: 100px;"></router-outlet>
+            </div>
+        </div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
