--- a/dataeval-app/src/app/components/menus/menu/menu.component.html
+++ b/dataeval-app/src/app/components/menus/menu/menu.component.html
@@ -1,10 +1,11 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    
+    <!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div><h1  class="navbar-brand">Testing</h1></div>
         <ul class="navbar-nav navbar-collapse">
-            <!-- <li>
+             <li>
                 <a *ngIf="!isLoggedIn" class="nav-link" href="/login">Login</a>
-            </li> -->
+            </li>  
             
             <li>
                 <a *ngIf="isLoggedIn" class="nav-link" href="/flowconfig" >Manage Prototype</a>
@@ -24,13 +25,15 @@
         </ul> 
 
         <ul class="navbar-nav navbar-collapse justify-content-end">
-            <!-- <li>
+            <li>
                 <a *ngIf="!isLoggedIn" class="nav-link" href="/login">Login</a>
-            </li> -->
+            </li>  
             <li>
                 <a *ngIf="isLoggedIn" class="nav-link" href="/logout" (click)=handleLogout()>Logout</a>
             </li>
         </ul>
 
-    </nav>
+    </nav> -->
 </header>
+
+ 
