add search criteria on mange screens

--- a/dataeval-app/src/app/app.component.html
+++ b/dataeval-app/src/app/app.component.html
@@ -22,7 +22,7 @@
 
         <button *ngIf="isLoggedIn" (click)="view('/flowconfig')" mat-button class="menu-button">
             <mat-icon>arrow_right</mat-icon>
-            <span>Manage Forms</span>
+            <span>Admin Forms</span>
         </button>
         <button *ngIf="isLoggedIn" (click)="view('/userforms')" mat-button class="menu-button">
             <mat-icon>arrow_right</mat-icon>
