--- a/dataeval-app/src/app/admin/flowconfig/flowconfig.component.html
+++ b/dataeval-app/src/app/admin/flowconfig/flowconfig.component.html
@@ -1,9 +1,13 @@
  
 
-<div >
-    <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
-        <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
+<div style="width:100%; margin-top: 5px;" class="border">
+
+    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+        <h4 class="modal-title" id="modal-basic-title">View Role Forms</h4>
     </div>
+    <!-- <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
+        <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
+    </div> -->
     <div class="example-container mat-elevation-z8">
 
         <mat-table [dataSource]="fcDataSource">
@@ -11,8 +15,8 @@
           The actual rendered columns are set as a property on the row definition" -->
 
             <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+                <mat-header-cell *matHeaderCellDef> S.No </mat-header-cell>
+                <mat-cell *matCellDef="let row; let i=index"> {{i+1}}</mat-cell>
             </ng-container><!-- Progress Column -->
             <ng-container matColumnDef="role">
                 <mat-header-cell *matHeaderCellDef> Role Name </mat-header-cell>
@@ -37,7 +41,7 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;">
             </mat-row>
         </mat-table>
-        <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
+        <mat-paginator style="display: none;" [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
 
     </div>
 
@@ -173,6 +177,4 @@
     </ng-template>
 
 
-    <hr>
-
-    <pre>{{ closeResult }}</pre>
+    <hr> 
