--- a/dataeval-app/src/app/admin/question/question.component.html
+++ b/dataeval-app/src/app/admin/question/question.component.html
@@ -1,21 +1,40 @@
- 
- <div style="width:100%">
-    <div class="row">
-        <div class="col-md-12 mx-auto">
-          <div class="md-form">
-            <input
-              type="text"
-              
-              class="form-control"
-              id="search"
-              mdbInput
-            />
-            <label for="search">Search</label>
-          </div>
-        </div>
-      </div>
+<div style="width:100%; margin-top: 5px;" class="border">
 
-    
+    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+        <h4 class="modal-title" id="modal-basic-title">Manage Fields</h4>
+    </div>
+    <div class="container-fluid">
+        
+    <div class="modal-body ">
+        <form [formGroup]="searchForm"   (ngSubmit)="search()">
+            
+        <div class="row">
+            <div class="form-group col-4">
+                <label for="qname" class="font-weight-bold text-dark label-font" >Name</label>
+                <input type="text" class="form-control" id="qname" placeholder="Enter Name"
+                    name="qname" formControlName="qname" required> 
+            </div> 
+            <div class="form-group col-4"> 
+                <label for="sname"  class="font-weight-bold text-dark label-font">Section</label>
+                <select formControlName="sname"  class="form-control" value="">
+                    <option value='' disabled selected="{{questionDataSouce.query.sectionId == '' ">Please select</option>
+                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                    </option>
+                </select>
+            </div>
+        </div>
+            
+       
+        <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
+            <button type="submit" class="btn btn-secondary" >Search</button> &nbsp;
+            <button type="button" class="btn btn-secondary" (click)="resetSearch()" >Reset</button>
+        </div>
+
+        </form>
+    </div>
+    </div>
+
+    <hr/>
     <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
         <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
     </div>
@@ -26,23 +45,23 @@
           The actual rendered columns are set as a property on the row definition" -->
 
             <ng-container matColumnDef="id">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> ID </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+                <mat-header-cell *matHeaderCellDef> S.No </mat-header-cell>
+                <mat-cell *matCellDef="let row; let i=index"> {{ i + (currentPageIndex)+1}} </mat-cell>
             </ng-container><!-- Progress Column -->
-            <ng-container matColumnDef="role">
-                <mat-header-cell *matHeaderCellDef> Question Type</mat-header-cell>
+            <ng-container matColumnDef="type">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Question Type</mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.type}}</mat-cell>
             </ng-container>
 
             <!-- Name Column -->
-            <ng-container matColumnDef="flowName">
-                <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.label}} </mat-cell>
             </ng-container>
 
             <!-- Status Column -->
             <ng-container matColumnDef="status">
-                <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
                 <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
             </ng-container>
 
@@ -77,158 +96,159 @@
         <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
 
     </div>
- 
-
-<ng-template #content let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Add Question</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
-            #closeFlowConfigModal>
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="questionForm" #formDirective="ngForm" (ngSubmit)="saveFlowConfig()">
 
 
-            <div class="form-group">
-                <label for="questionName" class="font-weight-bold">Name :</label>
-                <input type="text" class="form-control" id="questionName" placeholder="Enter Question"
-                    name="questionName" formControlName="questionName" required>
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Add Question</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
+                #closeFlowConfigModal>
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="questionForm" #formDirective="ngForm" (ngSubmit)="saveFlowConfig()">
 
 
-            </div>
-            <div class="mt-2">
-                <div *ngIf="questionName.invalid && (questionName.dirty || questionName.touched)"
-                    class="alert alert-danger">
-                    <div *ngIf="questionForm.controls['questionName']?.errors.required">
-                        Name is required.
-                    </div>
-                    <div *ngIf="questionForm.controls['questionName']?.errors.minlength">
-                        Name must be at least 4 characters long.
-                    </div>
+                <div class="form-group">
+                    <label for="questionName" class="font-weight-bold">Name :</label>
+                    <input type="text" class="form-control" id="questionName" placeholder="Enter Question"
+                        name="questionName" formControlName="questionName" required>
+
 
                 </div>
-            </div>
+                <div class="mt-2">
+                    <div *ngIf="questionName.invalid && (questionName.dirty || questionName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="questionForm.controls['questionName']?.errors.required">
+                            Name is required.
+                        </div>
+                        <div *ngIf="questionForm.controls['questionName']?.errors.minlength">
+                            Name must be at least 4 characters long.
+                        </div>
 
-            <div class="form-group">
-                <label for="type" class="font-weight-bold" >Type</label>
-                <select class="custom-select" (change)="selectType($event)" formControlName="type" required>
-                    <option value="" disabled>Select Type</option>
-                    <option *ngFor="let type of types" value="{{type.name}}">{{type.name}}</option>
-                </select>
-                <div class="invalid-feedback">
-                    Please provide a valid city.
-                  </div>
-            </div>
-            <div class="form-group">
-                <label for="section" class="font-weight-bold" >Section</label>
-                <select formControlName="section" (change)="selectSection($event)" class="form-control" value="">
-                    <option value="">Please select</option>
-                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
-                    </option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label for="status" class="font-weight-bold">Status</label>
-
-
-                <select class="custom-select" formControlName="status">
-
-                    <option value="Active">Active</option>
-                </select>
-            </div>
-
-
-            <div class="container text-center">
-
-
-                <button data-dismiss="modal" class="btn btn-success " [disabled]="!questionForm.valid"
-                    class="btn btn-info">Save</button>
-                &nbsp; &nbsp;
-                <button type="button" class="btn  btn-secondary"
-                    (click)="resetCreateForm(questionForm, formDirective)">reset</button>
-
-            </div>
-
-        </form>
-    </div>
-
-</ng-template>
-
-<ng-template #contentEdit let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Update Question</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
-            #closeFlowConfigModal>
-            <span aria-hidden="true">&times;</span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form [formGroup]="questionEditForm" (ngSubmit)="updateQuestion()">
-            <div class="form-group">
-                <label for="id">Id</label>
-                <div class="input-group">
-                    <input readonly class="form-control" formControlName="id">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label for="questionEName" class="font-weight-bold">Name :</label>
-                <input type="text" class="form-control" id="questionEName" placeholder="Enter Flow Name"
-                    name="questionEName" formControlName="questionEName" required>
-
-
-            </div>
-            <div class="mt-2">
-                <div *ngIf="questionEName.invalid && (questionEName.dirty || questionEName.touched)"
-                    class="alert alert-danger">
-                    <div *ngIf="questionEditForm.controls['questionEName']?.errors.required">
-                        Name is required.
+                <div class="form-group">
+                    <label for="type" class="font-weight-bold">Type</label>
+                    <select class="custom-select" (change)="selectType($event)" formControlName="type" required>
+                        <option value="" disabled>Select Type</option>
+                        <option *ngFor="let type of types" value="{{type.name}}">{{type.name}}</option>
+                    </select>
+                    <div class="invalid-feedback">
+                        Please provide a valid city.
                     </div>
-                    <div *ngIf="questionEditForm.controls['questionEName']?.errors.minlength">
-                        Name must be at least 4 characters long.
-                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="section" class="font-weight-bold">Section</label>
+                    <select formControlName="section" (change)="selectSection($event)" class="form-control" value="">
+                        <option value="" disabled>Please select</option>
+                        <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                        </option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="status" class="font-weight-bold">Status</label>
+
+
+                    <select class="form-control custom-select" formControlName="status"  value=""> 
+                        <option value="" disabled>Please select</option>
+                        <option value="Active">Active</option>
+                    </select>
+                </div>
+
+
+                <div class="container text-center">
+
+
+                    <button data-dismiss="modal" class="btn btn-success " [disabled]="!questionForm.valid"
+                        class="btn btn-info">Save</button>
+                    &nbsp; &nbsp;
+                    <button type="button" class="btn  btn-secondary"
+                        (click)="resetCreateForm(questionForm, formDirective)">reset</button>
 
                 </div>
-            </div>
 
-            <div class="form-group">
-                <label for="type" class="font-weight-bold">Type</label>
+            </form>
+        </div>
+
+    </ng-template>
+
+    <ng-template #contentEdit let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Update Question</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
+                #closeFlowConfigModal>
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="questionEditForm" (ngSubmit)="updateQuestion()">
+                <div class="form-group">
+                    <label for="id">Id</label>
+                    <div class="input-group">
+                        <input readonly class="form-control" formControlName="id">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="questionEName" class="font-weight-bold">Name :</label>
+                    <input type="text" class="form-control" id="questionEName" placeholder="Enter Flow Name"
+                        name="questionEName" formControlName="questionEName" required>
 
 
-                <select class="custom-select" (change)="selectType($event)" formControlName="type">
-                    <option value="" disabled>Select Type</option>
-                    <option *ngFor="let type of types" [selected]="type.name === selectedType" value="{{type.name}}">
-                        {{type.name}}</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="status" class="font-weight-bold">Status</label>
-                <select class="custom-select" formControlName="status">
-                    <option value="Active">Active</option>
-                    <option value="Inactive">Inactive</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="section" class="font-weight-bold" >Section</label>
-                <select formControlName="section" (change)="selectSection($event)" class="form-control" value="">
-                    <option value="">Please select</option>
-                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
-                    </option>
-                </select>
-            </div>
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="questionEName.invalid && (questionEName.dirty || questionEName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="questionEditForm.controls['questionEName']?.errors.required">
+                            Name is required.
+                        </div>
+                        <div *ngIf="questionEditForm.controls['questionEName']?.errors.minlength">
+                            Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="type" class="font-weight-bold">Type</label>
 
 
-            <div class="text-center">
-                <button data-dismiss="modal" [disabled]="!questionEditForm.valid" class="btn btn-info">Update</button>
-            </div>
-        </form>
-    </div>
+                    <select class="custom-select" (change)="selectType($event)" formControlName="type">
+                        <option value="" disabled>Select Type</option>
+                        <option *ngFor="let type of types" [selected]="type.name === selectedType"
+                            value="{{type.name}}">
+                            {{type.name}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="status" class="font-weight-bold">Status</label>
+                    <select class="custom-select" formControlName="status">
+                        <option value="Active">Active</option>
+                        <option value="Inactive">Inactive</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="section" class="font-weight-bold">Section</label>
+                    <select formControlName="section" (change)="selectSection($event)" class="form-control" value="">
+                        <option value="">Please select</option>
+                        <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                        </option>
+                    </select>
+                </div>
 
-</ng-template>
+
+                <div class="text-center">
+                    <button data-dismiss="modal" [disabled]="!questionEditForm.valid"
+                        class="btn btn-info">Update</button>
+                </div>
+            </form>
+        </div>
+
+    </ng-template>
 
 
 </div>
- 
