--- a/dataeval-app/src/app/admin/userforms/userforms.component.html
+++ b/dataeval-app/src/app/admin/userforms/userforms.component.html
@@ -1,15 +1,58 @@
-<app-menu></app-menu>
+<div style="width:100%; margin-top: 5px;" class="border">
+
+    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+        <h4 class="modal-title" id="modal-basic-title">Search User Forms</h4>
+    </div>
+    <div class="container-fluid">
+        
+    <div class="modal-body ">
+       <form [formGroup]="searchForm"   (ngSubmit)="search()">
+            
+        <div class="row">
+            <div class="form-group col-4">
+                <label for="rName" class="font-weight-bold text-dark label-font" >Role</label>
+                <input type="text" class="form-control" id="rName" placeholder="Enter Role Name"
+                    name="rName" formControlName="rName" required> 
+            </div> 
+            <div class="form-group col-4">
+                <label for="uName" class="font-weight-bold text-dark label-font" >User Name</label>
+                <input type="text" class="form-control" id="uName" placeholder="Enter User Name"
+                    name="uName" formControlName="uName" required> 
+            </div> 
+            <!-- <div class="form-group col-4"> 
+                <label for="sname"  class="font-weight-bold text-dark label-font">Section</label>
+                <select formControlName="sname"  class="form-control" value="">
+                    <option value='' disabled selected="{{dataSource.query.sectionId == '' ">Please select</option>
+                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                    </option>
+                </select>
+            </div> -->
+        </div>
+            
+       
+        <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
+            <button type="submit" class="btn btn-secondary" >Search</button> &nbsp;
+            <button type="button" class="btn btn-secondary" (click)="resetSearch()" >Reset</button>
+        </div>
+
+        </form>  
+    </div>
+    </div>
+
+    <hr/>
+
+
 <div class="container">
      
     <div class="example-container mat-elevation-z8">
 
-        <mat-table [dataSource]="questionDataSouce">
+        <mat-table [dataSource]="dataSource">
             <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
             <ng-container matColumnDef="id">
                 <mat-header-cell *matHeaderCellDef> ID </mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
+                <mat-cell *matCellDef="let row; let i = index"> {{i + (currentPageIndex)  +1}} </mat-cell>
             </ng-container><!-- Progress Column -->
             <ng-container matColumnDef="role">
                 <mat-header-cell *matHeaderCellDef>User Name</mat-header-cell>
@@ -46,7 +89,8 @@
 
         </mat-table>
 
-        <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[10, 25, 100]"  (page)="onPaginateChange($event)" [pageSize]="10"></mat-paginator>
 
     </div>
+</div>
 </div>
