--- a/dataeval-app/src/app/admin/userforms/userforms.component.html
+++ b/dataeval-app/src/app/admin/userforms/userforms.component.html
@@ -56,7 +56,7 @@
             </ng-container><!-- Progress Column -->
             <ng-container matColumnDef="role">
                 <mat-header-cell *matHeaderCellDef>User Name</mat-header-cell>
-                <mat-cell *matCellDef="let row"> {{row.user.name}}</mat-cell>
+                <mat-cell *matCellDef="let row"> {{row.user.label}}</mat-cell>
             </ng-container>
 
             <!-- Name Column -->
