--- a/dataeval-app/src/app/admin/manageuser/manageuser.component.html
+++ b/dataeval-app/src/app/admin/manageuser/manageuser.component.html
@@ -1,2 +1,230 @@
+<div style="width:100%; margin-top: 5px;" class="border">
 
-<p>manageuser works!</p>
+    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+        <h4 class="modal-title" id="modal-basic-title">Manage Users</h4>
+    </div>
+    <!-- <div class="container-fluid">
+        
+    <div class="modal-body ">
+        <form [formGroup]="searchForm"   (ngSubmit)="search()">
+            
+        <div class="row">
+            <div class="form-group col-4">
+                <label for="uName" class="font-weight-bold text-dark label-font" >Name</label>
+                <input type="text" class="form-control" id="uName" placeholder="Enter Name"
+                    name="uName" formControlName="uName" required> 
+            </div> 
+            <div class="form-group col-4"> 
+                <label for="rName"  class="font-weight-bold text-dark label-font">Section</label>
+                <select formControlName="rName"  class="form-control" value="">
+                    <option value='' disabled selected="{{dataSource.query.sectionId == '' ">Please select</option>
+                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                    </option>
+                </select>
+            </div>
+        </div>
+            
+       
+        <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
+            <button type="submit" class="btn btn-secondary" >Search</button> &nbsp;
+            <button type="button" class="btn btn-secondary" (click)="resetSearch()" >Reset</button>
+        </div>
+
+        </form>
+    </div> 
+    </div>
+
+    <hr/>-->
+    <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">`
+        <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
+    </div>
+    <div class="mat-elevation-z8">
+
+        <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+            <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+            <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef> S.No </mat-header-cell>
+                <mat-cell *matCellDef="let row; let i=index"> {{ i + (currentPageIndex)+1}} </mat-cell>
+            </ng-container><!-- Progress Column -->
+
+            <ng-container matColumnDef="userType">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> User Type</mat-header-cell>
+                <mat-cell *matCellDef="let row" > {{ row.role.name | titlecase}} 
+                </mat-cell>
+            </ng-container>
+            
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.label}} </mat-cell>
+            </ng-container>
+
+            <!-- Status Column -->
+            <ng-container matColumnDef="status">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
+            </ng-container>
+ 
+            <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
+                <mat-cell *matCellDef="let row">
+                    <button mat-raised-button class="btn btn-secondary" *ngIf="row.role.name !=  'admin' && row.role.name !=  'ADMIN'" (click)="openEdit(contentEdit, row)">
+                        Edit</button>
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;">
+            </mat-row>
+
+        </mat-table>
+
+        <mat-paginator [pageSizeOptions]="[10, 25, 100]" [pageSize]="10"></mat-paginator>
+
+    </div>
+
+
+    <ng-template #content let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Add Question</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
+                #closeFlowConfigModal>
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="createForm" #formDirective="ngForm" (ngSubmit)="save()">
+
+
+                <div class="form-group">
+                    <label for="sName" class="font-weight-bold">Name :</label>
+                    <input type="text" class="form-control" id="sName" placeholder="Enter Question"
+                        name="sName" formControlName="sName" required>
+
+
+                </div>
+                 
+
+                <div class="mt-2">
+                    <div *ngIf="sName.invalid && (sName.dirty || sName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="createForm.controls['sName']?.errors.required">
+                            Name is required.
+                        </div>
+                        <div *ngIf="createForm.controls['sName']?.errors.minlength">
+                            Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                 
+                <div class="form-group">
+                    <label for="userType" class="font-weight-bold">User Type</label>
+                    <select class="custom-select"   formControlName="userType"> 
+                        <option value="" disabled>Select Role</option>
+                        <option *ngFor="let role of roles"  
+                            value="{{role.id}}">
+                            {{role.name | titlecase}}</option>
+                    </select>
+                </div>
+                
+
+                <div class="form-group">
+                    <label for="status" class="font-weight-bold">Status</label>
+
+
+                    <select class="form-control custom-select" formControlName="status"  value=""> 
+                         
+                        <option value="Active" selected>Active</option>
+                    </select>
+                </div>
+
+
+                <div class="container text-center">
+
+
+                    <button data-dismiss="modal" class="btn btn-success " [disabled]="!createForm.valid"
+                        class="btn btn-info">Save</button>
+                    &nbsp; &nbsp;
+                    <button type="button" class="btn  btn-secondary"
+                        (click)="resetCreateForm(createForm, formDirective)">reset</button>
+
+                </div>
+
+            </form>
+        </div>
+
+    </ng-template>
+
+    <ng-template #contentEdit let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Update Question</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
+                #closeFlowConfigModal>
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="editForm" (ngSubmit)="updateQuestion()">
+                <div class="form-group">
+                    <label for="id">Id</label>
+                    <div class="input-group">
+                        <input readonly class="form-control" formControlName="id">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="eName" class="font-weight-bold">Name :</label>
+                    <input type="text" class="form-control" id="eName" placeholder="Enter Flow Name"
+                        name="eName" formControlName="eName" required>
+
+
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="eName.invalid && (eName.dirty || eName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="editForm.controls['eName']?.errors.required">
+                            Name is required.
+                        </div>
+                        <div *ngIf="editForm.controls['eName']?.errors.minlength">
+                            Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                
+                <div class="form-group">
+                    <label for="userType" class="font-weight-bold">User Type</label>
+
+
+                    <select class="custom-select"  formControlName="userType"> 
+                        <option *ngFor="let role of roles"  
+                            value="{{role.id}}">
+                            {{role.name | titlecase}}</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="status" class="font-weight-bold">Status</label>
+                    <select class="custom-select" formControlName="status">
+                        <option value="Active">Active</option>
+                        <option value="Inactive">Inactive</option>
+                    </select>
+                </div>
+                 
+
+
+                <div class="text-center">
+                    <button data-dismiss="modal" [disabled]="!editForm.valid"
+                        class="btn btn-info">Update</button>
+                </div>
+            </form>
+        </div>
+
+    </ng-template>
+
+
+</div>
