--- a/dataeval-app/src/app/admin/pageconfig/pageconfig.component.html
+++ b/dataeval-app/src/app/admin/pageconfig/pageconfig.component.html
@@ -67,13 +67,13 @@
 
               
 
-            <ng-container matColumnDef="actions">
+            <!-- <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                 <mat-cell *matCellDef="let row">
                     <button mat-raised-button class="btn btn-secondary" (click)="openEdit(contentEdit, row)">
                         View</button>
                 </mat-cell>
-            </ng-container>
+            </ng-container> -->
 
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;">
