--- a/dataeval-app/src/app/auth/login/login.component.html
+++ b/dataeval-app/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
  
-<div class="container col-lg-6">
+<div class="container-fluid">
     <h1 class="text-center">Login</h1>
     <div class="card">
       <div class="card-body">
