--- a/dataeval-app/src/app/auth/login/login.component.html
+++ b/dataeval-app/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
  
-<div class="container-fluid">
+<div class="container col-md-6 border"  >
     <h1 class="text-center">Login</h1>
-    <div class="card">
+    <div class="card"  style="margin-bottom:80px;">
       <div class="card-body">
         <form class="form-group">
             <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
