--- a/dataeval-app/src/app/auth/login/login.component.html
+++ b/dataeval-app/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
  
-<div class="container col-md-6 border"  >
+<div class=" {{ loginSuccess ? 'container' : 'container-fluid' }} "  >
     <h1 class="text-center">Login</h1>
     <div class="card"  style="margin-bottom:80px;">
       <div class="card-body">
